hot fix scrollbar and logo

--- a/purebetv2.1/src/app/globals.css
+++ b/purebetv2.1/src/app/globals.css
@@ -15,6 +15,14 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+html {
+  overflow:   scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
 
 body {
   color: rgb(var(--foreground-rgb));
